tests/typing/bad/testfile-subscript-3.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

int main() { bool c; c[1]; }
